--- a/frontend/lang/en-US.json
+++ b/frontend/lang/en-US.json
@@ -188,20 +188,26 @@
 			"footnotes": "The prices listed on this page are just for reference, the actual price in Afdian shall prevail.",
 			"devCheck": {
 				"title": "Get the latest development build",
-				"description": "Provide an Afdian order number, you will have access to the latest Insider build after validation.",
-				"navigateToOrders": "Find my Afdian Orders",
-				"label": "Afdian Order No.",
-				"saveOrder": "Save order number in the browser for subsequent queries",
-				"query": "Validate",
-				"download": "Download Insider Build",
-				"lastUpdate": "Last updated on {time}",
-				"updateInfo": "Latest commit log {changelog}",
-				"noUpdate": "No updates since last download.",
-				"checking": "Checking version...",
+				"form": {
+					"description": "Provide an Afdian order number, you will have access to the latest Insider build after validation.",
+					"orders": "Find my Afdian Orders",
+					"label": "Afdian Order No.",
+					"save": "Save order number in the browser for subsequent queries",
+					"query": "Validate",
+					"download": "Download Insider Build"
+				},
+				"version": {
+					"checking": "Checking version...",
+					"fail": "Cannot fetch latest version information.",
+					"lastUpdate": "Last updated on {time}",
+					"updateInfo": "Latest commit log {changelog}",
+					"noUpdate": "No updates since last download."
+				},
 				"error": {
 					"malformedOrderId": "Invalid order number format",
 					"invalidOrderId": "Invalid order",
-					"cannotGetLink": "Cannot request download link"
+					"cannotGetLink": "Cannot request download link",
+					"http": "An error has occurred while processing the request"
 				},
 				"close": "Close"
 			}
