feat(frontend): add docs link

--- a/frontend/lang/en-US.json
+++ b/frontend/lang/en-US.json
@@ -5,6 +5,7 @@
 			"nav": {
 				"projects": "Projects",
 				"authors": "Authors",
+				"docs": "API Documentation",
 				"sfSubscription": " "
 			},
 			"theme-switcher": {
