--- a/frontend/lang/zh-TW.json
+++ b/frontend/lang/zh-TW.json
@@ -5,6 +5,7 @@
 			"nav": {
 				"projects": "項目列表",
 				"authors": "作者列表",
+				"docs": "API 文檔",
 				"sfSubscription": "粘液科技訂閱計劃"
 			},
 			"theme-switcher": {
